[#3] Move ColoredTriangleBuilder from example to library

--- a/rusted_tiles/Cargo.toml
+++ b/rusted_tiles/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rusted-tiles"
+name = "rusted_tiles"
 version = "0.1.0"
 authors = ["Orchaldir <orchaldir@gmail.com>"]
 edition = "2018"
