--- a/rusted_tiles/Cargo.toml
+++ b/rusted_tiles/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cgmath = "0.17.0"
 glium = "0.26.0"
 image = "0.23.1"
